fluid_properties.md, adding viscosity, not done yet

--- a/fluid_mechanics/_config.yml
+++ b/fluid_mechanics/_config.yml
@@ -14,6 +14,8 @@ html:                              # github buttons
   use_issues_button:       true
   use_repository_button:   true
   use_edit_page_button:    true
+  extra_navbar:            ""
+
 
 only_build_toc_files: true
 
