--- a/fluid_mechanics/_toc.yml
+++ b/fluid_mechanics/_toc.yml
@@ -3,7 +3,7 @@ root: title_page
 
 options:
   caption: Chapters
-  numbered: true
+  numbered: 3
 
 chapters:
 - file: chapters/fluid_properties/fluid_properties
